<resources>
    <string name="app_name" translatable="false">Corona Sports</string>
    <string name="register_infected_people">Managing the dimension of the virus in the world of sport</string>
    <string name="country">Countries</string>
    <string name="team">Teams</string>
    <string name="statistic">Statistics</string>
    <string name="players_and_managers">Athletes and Coaches</string>
    <string name="pa_s_com_covid_19">Registe o país onde exite Covid-19</string>
    <string name="preencha_o_seguinte_formul_rio">Preencha o seguinte formulário</string>
    <string name="nome_do_pa_s">Nome do país</string>
    <string name="casos_suspeitos">Casos Suspeitos</string>
    <string name="pessoas_infetadas">Pessoas Infetadas</string>
    <string name="numero_de_mortes">Numero de Mortes</string>
    <string name="numero_de_recuperados">Numero de Recuperados</string>
    <string name="inserir_pa_s">Guardar</string>
    <string name="img_pais" translatable="false">img_pais</string>
    <string name="inserir">inserir</string>
    <string name="voltar">voltar</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="idade">Idade</string>
    <string name="fun_o_na_equipa">Função na Equipa</string>
    <string name="data_de_confirma_o_do_virus">Data de Confirmação do virus</string>
    <string name="dados_clinicos">Dados Clinicos</string>
    <string name="registe_a_equipa_que_tem_elementos_com_covid_19">Registe a equipa que tem elementos com covid-19</string>
    <string name="registe_o_atleta_ou_treinador_infetado">Registe o atleta ou treinador Infetado</string>
    <string name="nome_da_equipa">Nome da Equipa</string>
    <string name="modalidade">Modalidade</string>
    <string name="data_de_funda_o">Ano de fundação</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Addpais">Adicionar País</string>
    <string name="addequipa">Adicionar Equipa</string>
    <string name="addplayer">Adicionar Atleta ou Treinador</string>
    <string name="estatistica_geral_das_equipas">Estatistica Geral Das Equipas</string>
    <string name="sem_dados">Sem Dados</string>
    <string name="ultima_equipa_registada">Última equipa registada</string>
    <string name="estatistica_geral_dos_pa_ses">Estatistica Geral Dos Países</string>
    <string name="paises_registados">Paises Registados</string>
    <string name="total_de_casos_suspeitos">Total de casos suspeitos</string>
    <string name="total_de_infetados">Total de infetados</string>
    <string name="total_de_obitos">Total de Óbitos</string>
    <string name="total_de_recuperados">Total de Recuperados</string>
    <string name="eliminar">Eliminar</string>
    <string name="cancelar">Cancelar</string>
    <string name="anos">anos</string>
    <string name="no">no</string>
    <string name="positivo_em">Positivo em</string>
    <string name="gest_o_covid_19">GESTÂO COVID-19</string>
    <string name="escolha_a_tabela">ESCOLHA A TABELA</string>
    <string name="numero_de_atletas_infetados">Numero de atletas infetados</string>
    <string name="estatistica_geral_dos_atletas">Estatistica Geral Dos Atletas</string>
    <string name="idade_m_dia_dos_atletas">Idade média dos atletas</string>
    <string name="ultimo_atleta_registado">Ultimo atleta registado</string>
    <string name="numero_de_equipas_afetadas">Numero de equipas afetadas</string>
    <string name="action_settings">settings</string>
    <string name="editarpais">Editar Pais</string>
    <string name="editarequipa">Editar Equipa</string>
    <string name="editaratleta">Editar Atleta ou Treinador</string>
    <string name="eliminarpais">Eliminar Pais</string>
    <string name="eliminarequipa">Eliminar Equipa</string>
    <string name="eliminaratleta">Eliminar Atleta ou Treinador</string>
    <string name="estatpais">Estatisticas Países</string>
    <string name="estatequipa">Estatisticas Equipas</string>
    <string name="estatatleta">Estatisticas Atletas e Treinadores</string>
    <string name="infetado">Infetado</string>
    <string name="recuperado">Recuperado</string>
    <string name="falecido">Falecido</string>
    <string name="baixo">Risco Baixo</string>
    <string name="moderado">Risco Moderado</string>
    <string name="elevado">Risco Elevado</string>
    <string name="extremo">Risco Extremo</string>
    <string name="validaçao">Este campo não pode estar vazio</string>
    <string name="invalido">Numero inválido</string>
    <string name="guradadosucesso">Atleta ou treinador guardado com sucesso</string>
    <string name="erroguardar">Erro ao guardar Atleta ou Treinador</string>
    <string name="guardarequipa">Equipa guardada com sucesso</string>
    <string name="erroguaradrequipa">Erro ao guardar Equipa</string>
    <string name="guardarpais">Pais guardado com sucesso</string>
    <string name="erroguardarpais">Erro: Não foi possível criar o pais</string>
    <string name="simeliminar">Sim, eliminar</string>
    <string name="naocancelar">Não, cancelar</string>
    <string name="eliminequipa">Eliminar Equipa</string>
    <string name="eliequipa">Tem a certeza que pretende eliminar a equipa \'</string>
    <string name="eqeliminada">Equipa eliminada com sucesso</string>
    <string name="impeliminar">Erro: Não foi possível eliminar a equipa</string>
    <string name="eliatleta">Tem a certeza que pretende eliminar o atleta \'</string>
    <string name="sucessatletea">Atleta eliminada com sucesso</string>
    <string name="impeliminaratl">Erro: Não foi possível eliminar o atleta</string>
    <string name="elipais">Eliminar Pais</string>
    <string name="apagarpais">Tem a certeza que pretende eliminar o pais \'</string>
    <string name="eliminadopais">Pais eliminado com sucesso</string>
    <string name="erooelimirpais">Erro: Não foi possível eliminar o pais</string>
    <string name="equipa">Equipa</string>
    <string name="pais">Pais</string>
    <string name="editar">editar</string>
    <string name="apagar">apagar</string>
</resources>
