<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_pneumonia"
            android:title="Home"/>
        <item
            android:id="@+id/nav_pais"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/country"/>
        <item
            android:id="@+id/nav_equipas"
            android:icon="@drawable/ic_treinador"
            android:title="@string/team"/>
        <item
            android:id="@+id/nav_atleta"
            android:icon="@drawable/ic_jogador"
            android:title="@string/players_and_managers"/>
        <item
            android:id="@+id/nav_estatisticas"
            android:icon="@drawable/ic_pneumonia"
            android:title="@string/statistic"/>

    </group>




</menu>
