<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
          android:id="@+id/action_inserir_atleta"
          android:title="@string/inserir"
           android:icon="@drawable/ic_add_black_24dp"
          app:showAsAction="ifRoom"
          android:visible="true"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_editar_atleta"
        android:title="@string/editar"
        android:icon="@drawable/ic_mode_edit_black_24dp"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_apagar_atleta"
        android:title="@string/apagar"
        android:icon="@drawable/ic_delete_black_24dp"
        android:visible="false"
        app:showAsAction="ifRoom"/>




</menu>