<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:padding="20dp"
            android:background="@color/blue">

            <ImageView
                android:id="@+id/img_pais"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/mundo_icon"
                android:contentDescription="@string/img_pais" />

            <TextView
                android:id="@+id/t_pais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/img_pais"
                android:layout_toRightOf="@+id/img_pais"
                android:fontFamily="sans-serif-medium"
                android:includeFontPadding="false"
                android:text="@string/pa_s_com_covid_19"
                android:textColor="@color/darkblue"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/username_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/t_pais"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/img_pais"
                android:includeFontPadding="false"
                android:textColor="@color/darkblue"
                android:text="@string/preencha_o_seguinte_formul_rio"
                android:textSize="13sp"
                android:layout_toEndOf="@+id/img_pais"
                android:layout_marginStart="10dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_do_pa_s">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nome_pais"
                    android:textColor="@color/darkblue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete"
                    android:drawableStart="@drawable/ic_add_location_black_24dp"
                    android:drawableLeft="@drawable/ic_add_location_black_24dp"
                    android:drawablePadding="15dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/casos_suspeitos">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/casos_suspeitos"
                    android:textColor="@color/darkblue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:drawableStart="@drawable/ic_warning_black_24dp"
                    android:drawableLeft="@drawable/ic_warning_black_24dp"
                    android:drawablePadding="15dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pessoas_infetadas">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pessoas_infetadas"
                    android:textColor="@color/darkblue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:drawableStart="@drawable/ic_cough"
                    android:drawableLeft="@drawable/ic_cough"
                    android:drawablePadding="15dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numero_de_mortes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/num_obitos"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/darkblue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:drawableStart="@drawable/ic_close_black_24dp"
                    android:drawableLeft="@drawable/ic_close_black_24dp"
                    android:drawablePadding="15dp"
                    android:textColorLink="#23283a" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numero_de_recuperados"
                android:layout_marginBottom="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/num_recuperados"
                    android:textColor="@color/darkblue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:drawableStart="@drawable/ic_assignment_turned_in_black_24dp"
                    android:drawableLeft="@drawable/ic_assignment_turned_in_black_24dp"
                    android:drawablePadding="15dp"
                    android:textColorLink="#23283a" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/binserir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/blue"
                android:text="@string/inserir_pa_s"
                android:textColor="@color/darkblue" />


        </LinearLayout>
    </LinearLayout>

</ScrollView>