<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#00ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:textColor="@color/darkblue"
            android:id="@+id/dialog_nomeAtleta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:text="Nome Do Atleta"/>
        <TextView
            android:textColor="@color/darkblue"
            android:id="@+id/dialog_estadoAtleta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Estado"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:textColor="@color/darkblue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/idade"
             />

        <TextView
            android:textColor="@color/darkblue"
            android:id="@+id/detalhes_idade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="25" />

            <TextView
                android:textColor="@color/darkblue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/fun_o_na_equipa" />

            <TextView
                android:textColor="@color/darkblue"
                android:id="@+id/detalhes_funcao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="Treinador " />

            <TextView
                android:textColor="@color/darkblue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/data_de_confirma_o_do_virus" />

            <TextView
                android:id="@+id/detalhes_data"
                android:textColor="@color/darkblue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="12/6/2020 " />

            <TextView
                android:textColor="@color/darkblue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/dados_clinicos" />

            <TextView
                android:id="@+id/detalhes_dados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="Tosse "
                android:textColor="@color/darkblue" />

            <TextView
                android:textColor="@color/darkblue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/equipa" />

            <TextView
                android:id="@+id/detalhes_equipa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="Sporting "
                android:textColor="@color/darkblue" />

            <TextView
                android:textColor="@color/darkblue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/pais" />

            <TextView
                android:id="@+id/detalhes_pais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="Portugal "
                android:textColor="@color/darkblue" />

            <Button
                android:id="@+id/buttonDetalhesPais"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@color/cardview_shadow_start_color"
                android:text="OK" />


        </LinearLayout>



    </LinearLayout>



</RelativeLayout>