<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#00ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:textColor="@color/darkblue"
            android:id="@+id/dialog_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:text="Nome Do Pais"/>
        <TextView
            android:textColor="@color/darkblue"
            android:id="@+id/dialog_estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Estado"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:textColor="@color/darkblue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/casos_suspeitos"
             />

        <TextView
            android:textColor="@color/darkblue"
            android:id="@+id/detalhes_suspeitos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="23489 " />

            <TextView
                android:textColor="@color/darkblue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/numero_de_mortes" />

            <TextView
                android:textColor="@color/darkblue"
                android:id="@+id/detalhes_obitos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="23489 " />

            <TextView
                android:textColor="@color/darkblue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/numero_de_recuperados" />

            <TextView
                android:id="@+id/detalhes_recuperados"
                android:textColor="@color/darkblue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="23489 " />

            <TextView
                android:textColor="@color/darkblue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/pessoas_infetadas" />

            <TextView
                android:id="@+id/detalhes_infetados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="23489 "
                android:textColor="@color/darkblue" />

            <Button
                android:id="@+id/buttonDetalhesPais"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@color/cardview_shadow_start_color"
                android:text="OK" />


        </LinearLayout>



    </LinearLayout>



</RelativeLayout>